<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LogInActivity"
        android:background="@color/greyLight">

    <View android:layout_width="match_parent"
          android:layout_height="0dp"
          android:id="@+id/view1"
          app:layout_constraintVertical_weight="1.2"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toTopOf="@+id/view2"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/signUp_label"
              android:padding="10dp"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toTopOf="@+id/view1"
              app:layout_constraintBottom_toTopOf="@+id/cardView"
              android:textColor="@android:color/background_dark"
              android:textSize="45sp"
              android:id="@+id/label" android:layout_marginTop="8dp"/>
    <androidx.cardview.widget.CardView android:layout_width="match_parent"
                                       android:layout_height="wrap_content"
                                       app:layout_constraintTop_toTopOf="parent"
                                       app:layout_constraintBottom_toBottomOf="parent"
                                       android:layout_marginRight="24dp"
                                       android:layout_marginLeft="24dp"
                                       android:orientation="vertical"
                                       android:gravity="center_horizontal"
                                       app:cardCornerRadius="8dp"
                                       android:id="@+id/cardView">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toBottomOf="@+id/label"
                      android:orientation="vertical"
                      android:layout_margin="15dp"
                      android:paddingRight="10dp"
                      android:paddingLeft="10dp"
                      android:paddingTop="20dp"
                      android:paddingBottom="20dp"
                      android:gravity="center_horizontal">
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/signUp_fullName"
                      android:id="@+id/et_userName"
                      android:padding="10dp"
                      android:layout_marginTop="18dp"
                      android:background="@drawable/round_corner_text_view"/>
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/signUp_mobileNo"
                      android:id="@+id/et_mbl"
                      android:padding="10dp"
                      android:layout_marginTop="18dp"
                      android:background="@drawable/round_corner_text_view"/>

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/signUp_password"
                      android:id="@+id/et_password"
                      android:padding="10dp"
                      android:layout_marginTop="18dp"
                      android:background="@drawable/round_corner_text_view"/>

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/signUp_renterPass"
                      android:id="@+id/et_renter_pass"
                      android:padding="10dp"
                      android:layout_marginTop="18dp"
                      android:background="@drawable/round_corner_text_view"/>

            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:layout_marginTop="18dp"
                    android:id="@+id/signUp"
                    android:background="@drawable/round_corner_button"
                    android:textColor="@android:color/white"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View android:layout_width="match_parent"
          android:layout_height="0dp"
          android:background="@drawable/half_color_background"
          app:layout_constraintTop_toBottomOf="@id/view1"
          app:layout_constraintVertical_weight="2"
          android:id="@+id/view2"/>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintLeft_toLeftOf="parent"
                  android:background="@drawable/round_corner_white"
                  android:padding="20dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/signUp_have_account"
                  android:textColor="@android:color/black"
                  android:layout_marginRight="10dp"
                  android:textSize="15sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/login_button"
                  android:id="@+id/logIn"
                  android:textColor="@color/colorPrimary"
                  android:textSize="15sp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>