<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
                                                         android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:id="@+id/appBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/toolbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:contentScrim="?attr/colorPrimary"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:orientation="vertical">
                    <androidx.appcompat.widget.Toolbar
                            android:layout_width="match_parent"
                            android:layout_height="?android:attr/actionBarSize"
                    android:id="@+id/toolBar">

                    </androidx.appcompat.widget.Toolbar>
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="Task Title"
                    android:layout_margin="10dp"
                    android:textSize="25sp"/>

                    <EditText android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:id="@+id/heading"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="25sp"/>
                </LinearLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:id="@+id/dateTimeCardView">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp">
                    <RelativeLayout android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                    android:id="@+id/time_layout">
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="Time"
                                  android:id="@+id/tv0"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:layout_below="@+id/tv0"
                                  android:text="@string/time"
                        android:id="@+id/tv_time"/>

                    </RelativeLayout>

                    <View android:layout_width="2dp" android:layout_height="match_parent"
                          android:background="@color/greyLight"
                          android:layout_marginTop="2dp"
                          android:layout_marginBottom="2dp"
                          android:layout_marginRight="5dp"
                          android:layout_marginLeft="5dp"/>
                    <RelativeLayout android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                    android:id="@+id/date_layout">
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="Date"
                                  android:id="@+id/tv1"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:layout_below="@+id/tv1"
                                  android:text="@string/date"
                        android:id="@+id/tv_date"/>

                    </RelativeLayout>


                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/dateTimeCardView"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:id="@+id/cardView1"
                    android:layout_marginTop="40dp">

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:paddingTop="10dp"
                              android:paddingBottom="10dp">
                    <ImageView android:layout_width="0dp"
                               android:layout_height="wrap_content"
                               android:layout_weight="1"
                               android:src="@drawable/ic_camera"
                               android:id="@+id/camera"/>

                    <ImageView android:layout_width="0dp"
                               android:layout_height="wrap_content"
                               android:layout_weight="1"
                               android:src="@drawable/ic_videocam"
                               android:id="@+id/video"/>
                    <ImageView android:layout_width="0dp"
                               android:layout_height="wrap_content"
                               android:layout_weight="1"
                               android:src="@drawable/ic_music"
                               android:id="@+id/music"/>
                    <ImageView android:layout_width="0dp"
                               android:layout_height="wrap_content"
                               android:layout_weight="1"
                               android:src="@drawable/ic_folder"
                               android:id="@+id/folder"/>
                    <ImageView android:layout_width="0dp"
                               android:layout_height="wrap_content"
                               android:layout_weight="1"
                               android:src="@drawable/ic_location"
                               android:id="@+id/location"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/cardView1"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:id="@+id/subTask_cardview"
                    android:layout_marginTop="40dp">
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:padding="10dp"
                          android:text="@string/addTask"/>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/subTask_cardview"
                  app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="30dp"
                    android:id="@+id/fab"
                    android:src="@drawable/ic_check"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--Bottom sheet-->
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/bottomSheet"
                        app:behavior_hideable="false"
                        app:behavior_peekHeight="0dp"
                        android:background="@color/translucentBlack"
                        android:visibility="gone"
                        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_alignParentBottom="true">
                <ImageView android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="1"
                           android:src="@drawable/ic_camera"
                           android:id="@+id/camera1"/>
            </LinearLayout>
        </RelativeLayout>

        <!-- subtask Layout-->
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/subtask_layout"
                        android:background="@android:color/black"
        android:visibility="gone">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                       android:src="@drawable/ic_cancel"
                       android:id="@+id/cancel"
                       android:layout_alignParentRight="true"
                       android:layout_alignParentTop="true"
                       android:layout_margin="10dp"/>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:layout_below="@+id/cancel"
                          android:layout_marginTop="20dp"
                          android:padding="10dp"
                          android:id="@+id/layout">
                <EditText android:layout_width="0dp" android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:hint="Add Sub Tasks"
                          android:textColor="@android:color/white"
                          android:textColorHint="@android:color/white"
                          android:id="@+id/tv_task"/>

                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                           android:src="@drawable/ic_add"
                           android:id="@+id/add"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="20dp"/>

            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView android:layout_width="match_parent"
                                                       android:layout_height="match_parent"
                                                       android:id="@+id/recycler_view"
                                                       android:layout_below="@+id/layout"
                                                       tools:listitem="@layout/row_add_task"
            ></androidx.recyclerview.widget.RecyclerView>

            <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="Done"
            android:background="@drawable/round_corner_button"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="30dp"
            android:id="@+id/btn_done"/>
        </RelativeLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>